[project]
name = "uknf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.118.0",
    "nh3>=0.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.11.9",
    "pydantic-settings>=2.11.0",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
    "argon2-cffi>=25.1.0",
]
